--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -2,14 +2,13 @@
 .projects_container {
   width: 100%;
   min-height: 100vh;
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  background-color: $color_gray_3;
 }
 .project_top_part {
-  border: 1px solid green;
   display: flex;
   width: 90%;
   max-width: 1500px;
@@ -20,17 +19,73 @@
   margin-top: 30px;
 }
 .project_left {
+  position: relative;
   margin-top: 30px;
   width: 550px;
   aspect-ratio: 1.3;
-  border: 1px solid red;
   display: flex;
-
+  margin-right: 20px;
+  overflow: hidden;
+  border-radius: 24px;
+  box-shadow: 0 0px 6px 1px $color_white_1;
+  &:hover {
+    .project_bot_part {
+      transform: scale(1);
+      transition: 0.3s ease transform;
+    }
+  }
   img {
-    height: 100%;
+    width: 100%;
+    // height: 100%;
     flex: 1;
     object-fit: cover;
-    transform: perspective(1300px) rotateY(20deg) scale(0.9);
+    border-radius: 24px;
+  }
+  .project_bot_part {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 1rem;
+    z-index: 100;
+    transform-origin: center center;
+    transform: scale(0);
+    transition: 0.3s ease transform;
+    background-color: rgba(128, 128, 128, 0.8);
+    h6 {
+      font-family: $font_main;
+      font-size: 1.5rem;
+      padding: 1rem 0;
+      color: $color_red_2;
+    }
+    p {
+      font-family: $font_text;
+      font-size: 1.2rem;
+      color: $color_white_3;
+      line-height: 2rem;
+    }
+  }
+  .project_image {
+    animation-name: projectAnim;
+    animation-duration: 500ms;
+    animation-iteration-count: 1;
+    @keyframes projectAnim {
+      from {
+        transform: perspective(1300px) rotateY(90deg) translateX(50px)
+          scale(0.5);
+        opacity: 0;
+      }
+      to {
+        transform: perspective(1300px) rotateY(0) translateX(0) scale(1);
+        opacity: 1;
+      }
+    }
+    // animation-fill-mode: forwards;
   }
 }
 .project_right {
@@ -39,25 +94,110 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  border: 2px solid blue;
-  padding: 2rem;
+  align-items: flex-start;
+  width: 300px;
+  padding: 0.5rem;
+  background-color: $color_gray_2;
+  border-radius: 16px;
+  box-shadow: 0 0px 8px 0px $color_red_1;
+  // padding: 1rem;
   .project_right_name {
+    position: relative;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid blue;
     font-size: 1.1rem;
-    p {
-      padding: 8px;
-      padding-bottom: 0;
+    h2 {
+      padding: 12px;
+      font-family: $font_main;
+      color: $color_red_2;
     }
     .arrow_icon {
-      color: $color_gray_1;
+      position: absolute;
+      right: 10px;
+      color: $color_white_1;
+
       &:hover {
         cursor: pointer;
-        color: $color_gray_3;
+        color: $color_gray_1;
       }
     }
+    .arrow_icon_left {
+      left: 10px;
+    }
+  }
+  .project_right_stack {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+
+    h2 {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-family: $font_main;
+      color: $color_white_2;
+    }
+    li {
+      width: 100%;
+      font-family: $font_text;
+      line-height: 1.5rem;
+      list-style: none;
+      display: flex;
+      align-items: center;
+      transition: 0.1s ease transform;
+      padding: 0.2rem 0;
+      color: $color_white_1;
+      .icon_icon {
+        color: $color_red_2;
+      }
+      &:hover {
+        transform: translateX(10px);
+        transition: 0.2s ease transform;
+      }
+      a {
+        text-decoration: none;
+        color: $color_red_2;
+        padding: 0 5px;
+      }
+      .github_icon {
+        color: $color_gray_1;
+      }
+    }
+  }
+}
+.colors_container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  li {
+    width: fit-content !important;
+    &:hover {
+      transform: translateX(0) !important;
+    }
+  }
+  span {
+    transform: translateY(5px);
+    width: 25px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    margin-left: 5px;
+  }
+}
+
+.project_active {
+  transform: perspective(1300px) rotateY(-90deg) translateX(-50px) scale(0.5);
+  opacity: 0;
+  transition: 0.5s ease all;
+}
+@media (max-width: 966px) {
+  .project_right {
   }
 }
