Rewrite Data and Add Colors

--- a/src/Index.scss
+++ b/src/Index.scss
@@ -16,6 +16,7 @@ $color_red_2: #dc2430;
 $color_gray_1: #485563;
 $color_gray_2: #304352;
 $color_gray_3: #29323c;
+$color_gray_3_1: #29323ccc;
 
 $color_white_1: #dfdfdf;
 $color_white_2: #efefef;
