--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -1,7 +1,7 @@
 @import "../Index.scss";
 .projects_container {
   width: 100%;
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -21,10 +21,11 @@
 .project_left {
   position: relative;
   margin-top: 30px;
-  width: 550px;
-  aspect-ratio: 1.3;
+  width: 530px;
+  aspect-ratio: 1.35;
   display: flex;
   margin-right: 20px;
+  margin-left: 20px;
   overflow: hidden;
   border-radius: 24px;
   box-shadow: 0 0px 6px 1px $color_white_1;
@@ -52,11 +53,11 @@
     justify-content: center;
     align-items: flex-start;
     padding: 1rem;
-    z-index: 100;
+    // z-index: 100;
     transform-origin: center center;
     transform: scale(0);
     transition: 0.3s ease transform;
-    background-color: rgba(128, 128, 128, 0.8);
+    background-color: $color_gray_3_1;
     h6 {
       font-family: $font_main;
       font-size: 1.5rem;
@@ -91,11 +92,14 @@
 .project_right {
   margin-top: 30px;
   margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 300px;
+  display: grid;
+  width: 530px;
+  grid-template-columns: 250px 280px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: flex-start;
+  // align-items: flex-start;
+  // width: 300px;
   padding: 0.5rem;
   background-color: $color_gray_2;
   border-radius: 16px;
@@ -103,11 +107,13 @@
   // padding: 1rem;
   .project_right_name {
     position: relative;
+    grid-column: 1/3;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
+
     h2 {
       padding: 12px;
       font-family: $font_main;
@@ -129,6 +135,7 @@
   }
   .project_right_stack {
     display: flex;
+    // margin-right: 10px;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
@@ -138,11 +145,16 @@
     h2 {
       display: flex;
       justify-content: center;
+      align-items: center;
       width: 100%;
       margin-top: 10px;
       margin-bottom: 10px;
       font-family: $font_main;
       color: $color_white_2;
+      .cirlce_icon {
+        color: $color_red_2;
+        margin-right: 5px;
+      }
     }
     li {
       width: 100%;
@@ -154,6 +166,7 @@
       transition: 0.1s ease transform;
       padding: 0.2rem 0;
       color: $color_white_1;
+      font-size: 1.1rem;
       .icon_icon {
         color: $color_red_2;
       }
@@ -179,17 +192,41 @@
   width: 100%;
   li {
     width: fit-content !important;
+    font-size: 1.1rem;
     &:hover {
       transform: translateX(0) !important;
     }
   }
+  .color_box {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    &:hover .hover_color {
+      opacity: 1;
+      transform: translateY(5px);
+      transition: 0.2s ease all;
+    }
+  }
   span {
-    transform: translateY(5px);
     width: 25px;
     aspect-ratio: 1;
     border-radius: 50%;
     margin-left: 5px;
+    cursor: pointer;
   }
+}
+.hover_color {
+  position: absolute;
+  background-color: $color_gray_3;
+  border-radius: 6px;
+  color: $color_white_3;
+  top: 100%;
+  left: 0;
+  opacity: 0;
+  transition: 0.2s ease all;
+  font-family: $font_text;
+  padding: 0.4rem !important;
 }
 
 .project_active {
@@ -199,5 +236,10 @@
 }
 @media (max-width: 966px) {
   .project_right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    max-width: 90%;
   }
 }
