--- a/src/Index.scss
+++ b/src/Index.scss
@@ -11,7 +11,9 @@ $font_main: "Cormorant Garamond", serif;
 $font_text: "Lusitana", serif;
 
 $color_red_1: #e53935;
+$color_red_1_1: #e53935aa;
 $color_red_2: #dc2430;
+$color_red_2_1: #dc2430aa;
 
 $color_gray_1: #485563;
 $color_gray_2: #304352;
