--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -8,6 +8,44 @@
   align-items: center;
   background-color: $color_gray_3;
 }
+.project_title {
+  width: 100%;
+  margin: 20px 0;
+  padding: 2rem;
+  padding-left: 4rem;
+  display: flex;
+  position: relative;
+
+  .square_color {
+    position: absolute;
+    left: 50px;
+    top: 20px;
+    transform: rotate(-45deg);
+    background-color: $color_red_2_1;
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    transition: 0.3s ease all;
+  }
+  a {
+    text-decoration: none;
+    color: $color_white_1;
+    font-family: $font_main;
+    font-size: 2rem;
+    z-index: 5;
+    font-weight: 600;
+    &:hover {
+      ~ .square_color {
+        transform: rotate(0);
+        width: 150px;
+        transition: 0.3s ease all;
+        border-radius: 8px;
+        top: 30px;
+      }
+    }
+  }
+}
+
 .project_top_part {
   display: flex;
   width: 90%;
