--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -15,18 +15,20 @@
     align-items: center;
     flex-wrap: wrap;
     .main_left {
-      margin-right: 40px;
       border: 2px solid red;
+      display: flex;
+      margin: 100px 30px;
       img {
         width: 100%;
         height: 100%;
-        object-fit: contain;
-        flex: sc;
+        object-fit: cover;
+        flex: 1;
       }
     }
     .main_right {
       line-height: 4rem;
       position: relative;
+      // margin: 40px 0;
       animation-name: mainRightAnime;
       animation-duration: 500ms;
       @keyframes mainRightAnime {
