--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -138,7 +138,7 @@
   // justify-content: flex-start;
   // align-items: flex-start;
   // width: 300px;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   background-color: $color_gray_2;
   border-radius: 16px;
   box-shadow: 0 0px 8px 0px $color_red_1;
@@ -151,7 +151,6 @@
     justify-content: center;
     align-items: center;
     font-size: 1.3rem;
-
     h2 {
       padding: 12px;
       font-family: $font_main;
@@ -159,7 +158,7 @@
     }
     .arrow_icon {
       position: absolute;
-      right: 10px;
+      right: 5%;
       color: $color_white_1;
 
       &:hover {
@@ -168,7 +167,7 @@
       }
     }
     .arrow_icon_left {
-      left: 10px;
+      left: 5%;
     }
   }
   .project_right_stack {
@@ -189,6 +188,7 @@
       margin-bottom: 10px;
       font-family: $font_main;
       color: $color_white_2;
+      font-size: 1.2rem;
       .cirlce_icon {
         color: $color_red_2;
         margin-right: 5px;
