--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -78,7 +78,12 @@
         }
       }
       p {
+        margin-top: 10px;
         font-family: $font_text;
+        line-height: 1.1rem;
+        max-width: 250px;
+        font-size: 1rem;
+        margin-bottom: 20px;
       }
     }
   }
