--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -15,9 +15,25 @@
     align-items: center;
     flex-wrap: wrap;
     .main_left {
-      border: 2px solid red;
+      transform: translateX(-50px);
+      opacity: 0;
+
       display: flex;
       margin: 100px 30px;
+      max-width: 360px;
+      animation: mLeft;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      @keyframes mLeft {
+        from {
+          opacity: 0;
+          transform: translateX(-50px);
+        }
+        to {
+          opacity: 1;
+          transform: translateX(0);
+        }
+      }
       img {
         width: 100%;
         height: 100%;
